# thesis-workspace

./: .gitignore  config.py  config1.py  config_manager.py  es.py  evaluators.py  loggers.py  main.py  optimizers.py  pyproject.toml  resnet.py  resnet_cifar.py  resnet_cifar_small.py  resnet_training.py  trainers.py  utils.py
run_configs/: new_test_config.yaml  new_test_config_oes.yaml
src/: config.py  evaluators.py  optimizers.py  resnet_cifar.py  resnet_training.py  trainers.py  utils.py
test_run_configs/: cpu_backprop_subset.yaml  cpu_oes_subset.yaml  cpu_oes_subset_seq.yaml  cpu_simpes_subset.yaml  cuda_oes_500popsize.yaml  mps_oes_subset.yaml
