[project]
name = "thesis-workspace"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "numpy",
    "pyyaml>=6.0.2",
    "torch",
    "torchvision>=0.21.0",
    "tqdm",
    "wandb>=0.19.11",
]

[tool.uv.sources]
torch = { index = "pytorch_cu128" }
torchvision = { index = "pytorch_cu128" }

[[tool.uv.index]]
name = "pytorch_cu128"
url = "https://download.pytorch.org/whl/cu128"
